--- a/app/views/creatives/_testimonial.html.erb
+++ b/app/views/creatives/_testimonial.html.erb
@@ -11,27 +11,39 @@
 
     <div class="container">
         <div class "row">
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <!-- <div class="col-md-6 col-sm-12 col-xs-12">
                 <img class="center-block img-responsive logo-testimonial" src="/assets/upbeatproductions_logo.png">
                 <blockquote class="testimonial">  <p>"Instela is fantastic. It's really simple to use and the quality of the service is excellent. The attention to detail is great" </p> 
                 </blockquote>
                 <div class="name-testimonial ">  
                     Maxwell Fulford <strong>Office Manager, Instela </strong>     
                 </div>
-            </div> 
+            </div> --> 
 
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <!-- <div class="col-md-6 col-sm-12 col-xs-12">
                 <img class="center-block img-responsive logo-testimonial"  src="/assets/ronchini-logo.jpg">
-                <blockquote class="blockquote-reverse testimonial">  <p>"The tech support is amazing. They solved all my problems with no hastle" </p> 
-                    
+                <blockquote class="blockquote-reverse testimonial">  <p>"The tech support is amazing. They solved all my problems with no hastle" </p>      
                               <div class="clearfix visible-md-block"></div>
-  
-
                 </blockquote>
                 <div class="name-testimonial ">  
                     Maxwell Fulford <strong>Office Manager, Instela </strong>     
                 </div>
-                
+            </div>  -->
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <img class="img-responsive logo-testimonial" style="" src="/assets/ronchini-logo.png">
+
+               <!--  <img class="img-responsive logo-testimonial" style="width: 25%; text-align: right; margin-right: 50px;" src="/assets/ronchini-logo.png">
+ -->
+            </div> 
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <blockquote class="blockquote-reverse testimonial">  <p>"Instela.co offers a service with excellent communication, an easy booking system and good availability when working around a company’s busy schedule. The technician was on time, reliable and able to offer advice. The flat rate is transparent and cost effective with the added bonus of being able to supply tools needed. The service is straightforward and effortless to engage with, with a dedicated account manager helping with each step." </p>      
+                              <div class="clearfix visible-md-block"></div>
+                </blockquote>
+                <div class="name-testimonial ">  
+                    Stephanie Fleet <strong>Gallery Assistant, Ronchini Gallery </strong>     
+                </div>
             </div> 
 
             <div class="clearfix visible-md-block"></div>
