--- a/app/views/creatives/index.html.erb
+++ b/app/views/creatives/index.html.erb
@@ -3,6 +3,7 @@
 <%= render 'services' %>
 <%= render 'bg_primary' %>
 <%= render 'example' %>
+<%= render 'testimonial' %>
 <%= render 'contact' %>
 <%= render 'footer' %>
 
