--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,15 +1,34 @@
 <%= render 'navbar' %>
 <script src="https://checkout.stripe.com/checkout.js"></script>
-<script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+
 <%= javascript_include_tag 'creative/registration' %>
 
 
+<body style="background: #e8ecf0;">
+   
+    
+  <div class="page-header" style="height: auto;">
+    <div class="page-header-inner vc-outer">
+        <div class="vc-inner text-centered">
+            <br>
+            <h2 style="color: white; font-size: 5.0rem;">Your Account</h2>
+            <br>
+            <ul class="user--account-mobile-actions">
+                <li>
+                    <a class="btn-account btn-account-small" href="/history">Orders</a>
+                </li>
+                <li>
+                    <form method="post" class="ng-pristine ng-valid">
+                       <%= link_to 'LOG OUT', destroy_account_session_path, method: :delete, class: "btn-account btn-account-small" %>
+                    </form>
+                </li>
+            </ul>
+        </div>
+      </div>
+  </div>
 
-<body>
 
-</br></br></br></br></br> </br>
-<h1 style="text-align: center;">Your Account</h1>
-<br>
+
 <div class="container-small">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
