--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,39 @@
 <%= render 'navbar' %>
+<script src="https://checkout.stripe.com/checkout.js"></script>
+
+<%= javascript_include_tag 'creative/registration' %>
+
+
+<body style="background: #e8ecf0;">
+    <!-- <div class="page-header"><h2 style="text-align: center; color: white; font-size: 5.0rem;">Order History</h2></div> -->
+
+    
+
+
+  <div class="page-header" style="height: auto;">
+    <div class="page-header-inner vc-outer">
+        <div class="vc-inner text-centered">
+            <br>
+            <h2 style="color: white; font-size: 5.0rem;">Create An Account</h2>
+            <br>
+            <ul class="user--account-mobile-actions">
+                <li>
+
+                    <a class="btn-account btn-account-small" href="/contact">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+  </div>
+
+
+
+<div class="container-small">
+
+
+
+
+
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
 <script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
