Fix logo on safari

--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -4,7 +4,7 @@
 
         <!-- Title -->
         <div class="navbar-header pull-left">
-        <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i> instela</a>
+        <a class="navbar-brand page-scroll" href="/#page-top"><i class="fa fa-1x fa-magic wow bounceIn"></i>instela</a>
         </div>
         
         <!-- <div class="navbar-header pull-left">
