--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -128,6 +128,7 @@ Order Page
 
 .page-header {
     position: relative;
+    /*background: linear-gradient(105deg,#2d6c99,#69c0d3);*/
     background-color: #121c25;
     background-repeat: no-repeat;
     background-position: center;
