--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,12 +27,8 @@
   </div>
 
 
-
-<div class="container-small">
-
-
-
-
+<!-- container-small before  -->
+<div class="container-medium">
 
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
