--- a/app/views/orders/history.html.erb
+++ b/app/views/orders/history.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'navbar' %>
 
-<body style="background: #e8ecf0;">
+<body style="background: #e8ecf0;"> <!-- #ffe7e4 -->
 
     <div class="page-header" style="height: auto;">
     <div class="page-header-inner vc-outer">
