--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,9 +27,9 @@
       </div>
   </div>
 
-
-
-<div class="container-small">
+<div class="mbot30">
+<!-- container-small before  -->
+<div class="container-medium", style="margin-top: -20px;">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <span class="payment-errors"></span>
@@ -163,6 +163,7 @@
     </div>
     <% end %>
   </div>
+</div>
 </div>
 
 </body>
